# onet-translation-mcp-server

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/: onet_translate.py  settings.py  utils.py
